--- a/share/man/man8/man8.i386/kbdio.8
+++ b/share/man/man8/man8.i386/kbdio.8
@@ -31,7 +31,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\" 
-.\" $Header: /cvsroot/src/share/man/man8/man8.i386/Attic/kbdio.8,v 1.2 1995/10/07 21:45:17 jtc Exp $
+.\" $NetBSD: kbdio.8,v 1.3 1997/10/20 11:02:22 lukem Exp $
 .\" 
 .Dd April 15, 1995
 .Dt KBDIO 8
