--- a/share/man/man8/man8.i386/vgaio.8
+++ b/share/man/man8/man8.i386/vgaio.8
@@ -31,7 +31,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\" 
-.\" $Header: /cvsroot/src/share/man/man8/man8.i386/Attic/vgaio.8,v 1.3 1995/10/07 21:46:01 jtc Exp $
+.\" $NetBSD: vgaio.8,v 1.4 1997/10/20 11:02:10 lukem Exp $
 .\" 
 .Dd December 31, 1994
 .Dt VGAIO 8
